planka chart fixes

--- a/planka/Chart.yaml
+++ b/planka/Chart.yaml
@@ -5,9 +5,9 @@ description: A Helm chart for Planka, the Trello clone.
 type: application
 version: 0.0.1
 
-appVersion: "1.16.0"
+appVersion: "1.25.1"
 
 dependencies:
   - name: planka
-    version: 0.2.19
-    repository: 
+    version: 0.2.22
+    repository: "file://../submodules/planka/charts/planka"
