--- a/planka/values.yaml
+++ b/planka/values.yaml
@@ -56,7 +56,7 @@ planka:
   
   service:
     annotations: {}
-    type: NodePort
+    type: ClusterIP
     port: 1337
     ## @param service.containerPort Planka HTTP container port
     ## If empty will default to 1337
@@ -64,14 +64,14 @@ planka:
     containerPort: 1337
   
   ingress:
-    enabled: false
+    enabled: true
     className: ""
     annotations: {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     hosts:
       # Used to set planka BASE_URL if no `baseurl` is provided.
-      - host: planka.local
+      - host: planka.magdavis.click
         paths:
           - path: /
             pathType: ImplementationSpecific
