--- a/planka/Chart.yaml
+++ b/planka/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 name: planka
-description: A Helm chart for Planka, the Trello clone.
+description: Planka, the Trello clone.
 
 type: application
-version: 0.0.1
+version: 0.1.0
 
 appVersion: "1.25.1"
 
