--- a/lubelogger/values.yaml
+++ b/lubelogger/values.yaml
@@ -15,6 +15,10 @@ lubelogger:
       UseDarkMode: true
       EnableAuth: false
       UseMarkDownOnSavedNotes: true
+
+  persistence:
+    data:
+      enabled: true
   
   secret:
     create: false
