--- a/lubelogger/values.yaml
+++ b/lubelogger/values.yaml
@@ -1,6 +1,7 @@
 lubelogger:
   
-  replicaCount: 2
+  # TODO: configure NFS to be able to share images across nodes and therefore scale up
+  replicaCount: 1
   
   config:
     # `Warning`, `Error`, `Critical` and `None`. Learn more at:
@@ -16,10 +17,6 @@ lubelogger:
       EnableAuth: false
       UseMarkDownOnSavedNotes: true
 
-  persistence:
-    data:
-      enabled: true
-  
   secret:
     create: false
     name: "lubelogger-creds"
