--- a/argocd-image-updater/values.yaml
+++ b/argocd-image-updater/values.yaml
@@ -1,9 +1,10 @@
-# It is not advised to run more than one replica.
-replicaCount: 1
-
-config:
-  # -- Changing the Git commit message
-  gitCommitTemplate: ""
-
-  logLevel: "debug" # changed from 'info'
+argocd-image-updater:
+  # It is not advised to run more than one replica.
+  replicaCount: 1
+  
+  config:
+    # -- Changing the Git commit message
+    gitCommitTemplate: ""
+  
+    logLevel: "debug" # changed from 'info'
 
