--- a/argocd-image-updater/values.yaml
+++ b/argocd-image-updater/values.yaml
@@ -6,5 +6,5 @@ argocd-image-updater:
     # -- Changing the Git commit message
     gitCommitTemplate: ""
   
-    logLevel: "debug" # changed from 'info'
+    logLevel: "info" 
 
