--- a/nextcloud/templates/secrets.yaml
+++ b/nextcloud/templates/secrets.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 data:
-  nextcloud-password: REPLCEME
-  nextcloud-username: REPLACEME
-  smtp-host: REPLACEME
-  smtp-password: REPLACEME
-  smtp-username: REPLACEME
+  nextcloud-password: ""
+  nextcloud-username: ""
+  smtp-host: ""
+  smtp-password: ""
+  smtp-username: ""
 kind: Secret
 metadata:
   name: nextcloud
@@ -13,10 +13,10 @@ type: Opaque
 ---
 apiVersion: v1
 data:
-  db-hostname: REPLACEME
-  db-name: REPLACEME 
-  db-password: REPLACEME
-  db-username: REPLACEME
+  db-hostname: ""
+  db-name: "" 
+  db-password: ""
+  db-username: ""
 kind: Secret
 metadata:
   name: nextcloud-db-creds
