--- a/planka/Chart.yaml
+++ b/planka/Chart.yaml
@@ -3,10 +3,10 @@ name: planka
 description: Planka, the Trello clone.
 
 type: application
-version: 1.0.1
+version: 1.1.0
 
 dependencies:
   - name: planka
-    version: 1.0.3
-    repository: "file://../submodules/planka/charts/planka"
+    version: 1.1.1
+    repository: http://plankanban.github.io/planka
 
