--- a/nextcloud/templates/volumes.yaml
+++ b/nextcloud/templates/volumes.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: manual
   capacity:
-    storage: 100Gi
+    storage: 10Gi
   accessModes:
     - ReadWriteMany
   hostPath:
@@ -17,6 +17,34 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nextcloud-services
+  namespace: nextcloud
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nextcloud-data
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 100Gi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/mnt/loot/data/nextcloud"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nextcloud-data
   namespace: nextcloud
 spec:
   storageClassName: manual
