Turn PV mount back on

--- a/lubelogger/values.yaml
+++ b/lubelogger/values.yaml
@@ -30,8 +30,8 @@ lubelogger:
 
   persistence:
     data:
-      enabled: false
-#      existingClaim: lubelogger-data
+      enabled: true
+      existingClaim: lubelogger-data
   
   postgres:
     create: false
