--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,23 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Add dependency repos 
+        run: |
+          for repo in $(grep -R "repository:" charts/ | awk '{print $2}' | sort -u); do
+            echo "Adding repo $repo"
+            name=$(echo $repo | sed 's|https\?://||' | tr '/.' '-')
+            helm repo add $name $repo || true
+          done
+      
+          helm repo update
+      
+      - name: Build dependencies
+        run: |
+          for chart in charts/*; do
+            helm dependency build $chart
+          done
+
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         env:
