--- a/charts/planka/Chart.yaml
+++ b/charts/planka/Chart.yaml
@@ -8,5 +8,5 @@ version: 1.1.1
 dependencies:
   - name: planka
     version: 1.1.1
-    repository: http://plankanban.github.io/planka
+    repository: https://plankanban.github.io/planka
 
