Enable cronjob sidecar

--- a/charts/nextcloud/values.yaml
+++ b/charts/nextcloud/values.yaml
@@ -3,7 +3,7 @@ nextcloud:
   # TODO: enable redis. NextCloud sessions have a lot of issues with multiple replicas if Redis is unused
   # see: https://github.com/nextcloud/helm/issues/488
   replicaCount: 1
-  
+
   nextcloud:
     host: cloud.anthonymag.net
 
@@ -513,7 +513,7 @@ nextcloud:
   ## ref: https://docs.nextcloud.com/server/latest/admin_manual/configuration_server/background_jobs_configuration.html#cron
   ##
   cronjob:
-    enabled: false
+    enabled: true
   
     # Either 'sidecar' or 'cronjob'
     type: sidecar
@@ -533,10 +533,10 @@ nextcloud:
       #   postStartCommand: []
       #   preStopCommand: []
       # Set securityContext parameters. For example, you may need to define runAsNonRoot directive
-      securityContext: {}
-      #   runAsUser: 33
-      #   runAsGroup: 33
-      #   runAsNonRoot: true
+      securityContext: 
+        runAsUser: 1000
+        runAsGroup: 1000
+        runAsNonRoot: true
       #   readOnlyRootFilesystem: true
   
       # The command the cronjob container executes.
