turn off valkey pvc for now

--- a/charts/immich/values.yaml
+++ b/charts/immich/values.yaml
@@ -39,7 +39,7 @@ immich:
     enabled: true
     persistence:
       data:
-        enabled: true
+        enabled: false
         size: 1Gi
         type: persistentVolumeClaim
         accessMode: ReadWriteMany
