--- a/charts/planka/values.yaml
+++ b/charts/planka/values.yaml
@@ -17,6 +17,10 @@ planka:
   postgresql:
     enabled: false
 
+  securityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+
   service:
     type: NodePort
 
