Enable persistence on redis replicas too (oops)

--- a/charts/nextcloud/values.yaml
+++ b/charts/nextcloud/values.yaml
@@ -450,6 +450,7 @@ nextcloud:
     replica:
       persistence:
         enabled: true
+        existingClaim: nextcloud-cache
   
   ##
   ## Collabora chart configuration
