--- a/charts/nextcloud/values.yaml
+++ b/charts/nextcloud/values.yaml
@@ -449,7 +449,7 @@ nextcloud:
         #existingClaim: nextcloud-cache
     replica:
       replicaCount: 0
-      persistence:
+      #persistence:
         #enabled: true
         #existingClaim: nextcloud-cache
   
